Add display names in favour of japanese usernames (#164)
* Start working on display names

* Be better with api, it compiles!

* Remove useless method

* Actually send lines for schedules and clean up some code

* Category ID is required for the UI to currently function properly

* Allow 255 chars in pronouns, fixes https://github.com/esamarathon/oengusio/issues/113

* Cleanup